# Translayer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.de.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml  windows-exe.yml
docs/: ir-spec.md
examples/demo_en_to_zh/: run_demo.py
examples/gemini_image_validation/: run_validation.py
packaging/windows/: README-WINDOWS.md
src/translayer/: __init__.py  cli.py  config.py  desktop.py  languages.py  pipeline.py
src/translayer/api/: app.py  jobs.py  schemas.py
src/translayer/enrich/: glossary.py  grouping.py  image_selection.py  image_text.py  roles.py
src/translayer/fonts/: __init__.py  layout.py  registry.py
src/translayer/ir/: __init__.py  models.py  schema.py
src/translayer/localize/: image_pipeline.py  layout_fit.py  orchestrator.py  text_pipeline.py  whole_image_quality.py
src/translayer/parsers/: __init__.py  docx_parser.py  html_parser.py  pptx_parser.py
src/translayer/plugins/: __init__.py  base.py  registry.py
src/translayer/renderers/: __init__.py  docx_renderer.py  html_renderer.py  pptx_renderer.py
src/translayer/web/: index.html
tests/: conftest.py  test_api.py  test_api_image_quality.py  test_docx_roundtrip.py  test_fonts.py  test_gemini_image.py  test_html_roundtrip.py  test_image_pipeline.py  test_image_selection.py  test_inpaint.py  test_ir.py  test_languages.py  test_ocr.py  test_pipeline.py  test_pptx_roundtrip.py  test_smartart.py  test_tesseract_ocr.py  test_text_engines.py  test_text_pipeline.py  test_whole_image_quality.py
(+19 files in other folders)
