[project]
name = "translayer"
version = "0.1.1"
description = "Translate documents into any language without breaking layout — even the text inside images."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "shijiuzhang" }]
dependencies = [
    "pydantic>=2.6",
    "python-pptx>=0.6.23",
    "python-docx>=1.1",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "Pillow>=10.0",
    "fonttools>=4.40",
    "typer>=0.12",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
ocr-local = ["opencv-python>=4.8", "paddleocr>=2.7", "pytesseract>=0.3"]
inpaint-local = ["opencv-python>=4.8"]
gemini = ["google-genai>=2.12"]
dev = ["ruff>=0.4", "pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[project.scripts]
translayer = "translayer.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/translayer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
